<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/menu_color"/>

    <ImageView
        android:id="@+id/titleLogo"
        android:layout_width="@dimen/_77sdp"
        android:layout_height="@dimen/_77sdp"
        android:layout_marginTop="@dimen/_38sdp"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/themarks" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/titleLogo"
        app:layout_constraintStart_toStartOf="@+id/titleLogo"
        app:layout_constraintTop_toBottomOf="@+id/titleLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginTop="@dimen/_38sdp"
        android:layout_marginEnd="@dimen/_23sdp"
        android:background="@drawable/login_text"
        android:paddingTop="@dimen/_8sdp"
        android:textColorHint="@android:color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/themarks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/themarks">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/login_password"
            android:background="@android:color/transparent"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_23sdp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>