<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/menu_color"/>

        <ImageView
            android:id="@+id/titleLogo"
            android:layout_width="@dimen/_77sdp"
            android:layout_height="@dimen/_77sdp"
            android:layout_marginTop="@dimen/_38sdp"
            android:contentDescription="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/themarks" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/titleLogo"
            app:layout_constraintStart_toStartOf="@+id/titleLogo"
            app:layout_constraintTop_toBottomOf="@+id/titleLogo" />

        <TextView
            android:id="@+id/offering_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38sdp"
            android:text="@string/offering"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offering_qr_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offering_title">

            <TextView
                android:id="@+id/offering_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offering_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11ssp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/offering_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offering_id"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="@+id/offering_content"
                app:layout_constraintTop_toBottomOf="@+id/offering_content" />

            <TextView
                android:id="@+id/offering_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:text="@string/offering_id"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11ssp"
                android:textIsSelectable="true"
                app:layout_constraintBottom_toBottomOf="@+id/offering_id_title"
                app:layout_constraintStart_toEndOf="@+id/offering_id_title"
                app:layout_constraintTop_toTopOf="@+id/offering_id_title" />

            <TextView
                android:id="@+id/offering_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/offering_qr"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/offering_id_title"
                app:layout_constraintTop_toBottomOf="@+id/offering_id_title" />

            <ImageView
                android:id="@+id/offering_image"
                android:layout_width="@dimen/_154sdp"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offering_qr" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offering_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38sdp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offering_qr_layout">

            <ImageView
                android:id="@+id/offering_googleplay"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:contentDescription="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/google_play"
                app:tint="@color/button_color" />

            <TextView
                android:id="@+id/offering_link_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/offering_link"
                android:textColor="@color/button_color"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/offering_googleplay"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offering_link" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>