<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:background="@drawable/cardview"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:text="@string/goods_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/goods"
        app:layout_constraintTop_toBottomOf="@+id/goods" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:text="@string/goods_title"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/name_title"
        app:layout_constraintTop_toTopOf="@+id/name_title" />

    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/goods_price"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_title"
        app:layout_constraintTop_toBottomOf="@+id/name_title" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goods_price"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@+id/price_title"
        app:layout_constraintTop_toTopOf="@+id/price_title" />
</androidx.constraintlayout.widget.ConstraintLayout>