<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/menu_color"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/offering_edit_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/themarks" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/offering_edit_logo"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_23sdp"
        android:contentDescription="@string/description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/offering"
        app:tint="@color/themarks" />

    <TextView
        android:id="@+id/offering_edit_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/postingedit_venmo"
        android:textColor="@color/themarks"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_6sdp"
        app:layout_constraintTop_toTopOf="@+id/offering_edit_logo"
        app:layout_constraintBottom_toBottomOf="@+id/offering_edit_logo"
        app:layout_constraintStart_toEndOf="@+id/offering_edit_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offering"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_23sdp"
        android:paddingEnd="@dimen/_23sdp"
        android:background="@drawable/rounded_cardview"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offering_edit_logo">

        <TextView
            android:id="@+id/offering_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postingedit_offering"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/goods_edit_logo"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginStart="@dimen/_23sdp"
        android:contentDescription="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/offering"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/themarks"
        app:tint="@color/themarks" />

    <TextView
        android:id="@+id/goods_edit_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/main_goods"
        android:textColor="@color/themarks"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_6sdp"
        app:layout_constraintTop_toTopOf="@+id/goods_edit_logo"
        app:layout_constraintBottom_toBottomOf="@+id/goods_edit_logo"
        app:layout_constraintStart_toEndOf="@+id/goods_edit_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goods_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods_edit_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>